@startuml

title __SUPERCANARDBOF's Class Diagram__\n

  namespace  {
    abstract class Canard {
    }
  }
  

  namespace  {
    class CanardEnPlastique {
    }
  }
  

  namespace  {
    class Colvert {
    }
  }
  

  namespace  {
    class SuperCanard {
    }
  }
  

  namespace  {
    class SuperCanardTest {
    }
  }
  

  namespace  {
    class SuperCanardTest2 {
    }
  }
  

  namespace  {
    namespace ancaner {
      class cancaner.CanardMuet {
      }
    }
  }
  

  namespace  {
    namespace ancaner {
      class cancaner.Cancan {
      }
    }
  }
  

  namespace  {
    namespace ancaner {
      interface cancaner.CancanerInterface {
      }
    }
  }
  

  namespace  {
    namespace ancaner {
      class cancaner.CoinCoin {
      }
    }
  }
  

  namespace  {
    namespace oler {
      class voler.NePasVoler {
      }
    }
  }
  

  namespace  {
    namespace oler {
      class voler.VolerAvecDesAiles {
      }
    }
  }
  

  namespace  {
    namespace oler {
      interface voler.VolerInterface {
      }
    }
  }
  

  Canard o-- cancaner.CancanerInterface : cancanObj
  Canard o-- voler.VolerInterface : volerObj
  CanardEnPlastique -up-|> Canard
  Colvert -up-|> Canard
  SuperCanardTest -up-|> junit.framework.TestCase
  cancaner.CanardMuet .up.|> cancaner.CancanerInterface
  cancaner.Cancan .up.|> cancaner.CancanerInterface
  cancaner.CoinCoin .up.|> cancaner.CancanerInterface
  voler.NePasVoler .up.|> voler.VolerInterface
  voler.VolerAvecDesAiles .up.|> voler.VolerInterface


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
